--- a/assets/dex.css
+++ b/assets/dex.css
@@ -1,6 +1,165 @@
 body {
     background-color: #120a42;
-    color:#e1c3e7;
-    font-size: 34px;
+    color:#201517;
+    font-size: 14px;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
+
+.pokeLogo {
+    position: absolute;
+    top: 0px;
+    left: 50%;
+    width: 60%;
+  }
+
+  .display {
+      position: absolute;
+      width: 1070px;
+      height: 950px;
+      top: 120%;
+      left: 10%;
+  }
+
+  .pokeName {
+      position: absolute;
+      top: 0px;
+      left: 30%;
+      border: 2px solid whitesmoke;
+      color: #33343d;
+      border-radius: 15%;
+      background-color: rgb(174, 224, 243);
+      width: 370px;
+      font-size: 30px;
+  }
+
+  .display button {
+      position: absolute;
+      bottom:-10px;
+      left: 35%;
+      background-color: #499eee; /* Green */
+    border: 2px solid whitesmoke;
+    color: white;
+    padding: 15px 32px;
+    text-align: center;
+    display: inline-block;
+    font-size: 30px;
+  }
+  .display img {
+      position: absolute;
+      top: 5%;
+      left: 5%;
+      display: flex;
+  }
+  #types {
+      position: absolute;
+      top: 7%;
+      right: 20%;
+      font-size: 48px;
+      font-weight: bold;
+      text-align: right;
+  }
+  #moves {
+      position: absolute;
+      left: 4%;
+      bottom: 5%;
+      font-size: 20px;
+      font-weight: bold;
+      text-align: justify;
+  }
+  #stats {
+      position: absolute;
+      top: 20%;
+      right: 20%;
+      font-size: 34px;
+      font-weight: bold;
+      text-align: right;
+  }
+  
+  @media only screen and (min-device-width: 800px) {
+    body {
+        background-color: #120a42;
+        color:#201517;
+        font-size: 28px;
+        font-family: Verdana, Geneva, Tahoma, sans-serif;
+    }
+    .pokedex {
+      transform: rotate(90deg);
+      position: absolute;
+      left: 25%;
+      top: -100px;
+      max-width: 50%;
+      height: auto;
+      z-index: -1;
+    }
+    .pokeLogo {
+      position: absolute;
+      top: 0px;
+      left: 35%;
+      width: 30%;
+    }
+    .display {
+        position: relative;
+        width: 42%;
+        height: 550px;
+        top: 40%;
+        left: 30%;
+        -ms-transform: translateY(40%);
+        transform: translateY(40%);
+    }
+    .display img {
+        position: absolute;
+        top: 8%;
+        left: 5%;
+        display: flex;
+        width: 200px;
+    }
+    .display button {
+        position: absolute;
+      bottom:-50px;
+      left: 30%;
+      background-color: #499eee; 
+      border: 2px solid whitesmoke;
+      border-radius: 15%;
+    color: white;
+    padding: 15px 32px;
+    text-align: center;
+    display: inline-block;
+    font-size: 24px;
+    }
+    .pokeName {
+        position: absolute;
+        top: 0px;
+        left: 25%;
+        border: 2px solid whitesmoke;
+        color: #33343d;
+        border-radius: 15%;
+        background-color: rgb(174, 224, 243);
+        width: 280px;
+        font-size: 30px;
+    }
+    #types {
+        position: absolute;
+      top: 5%;
+      right: 20%;
+      font-size: 32px;
+      font-weight: bold;
+      text-align: right;
+    }
+    #stats {
+        position: absolute;
+      top: 17%;
+      right: 20%;
+      font-size: 18px;
+      font-weight: bold;
+      text-align: right;
+    }
+    #moves {
+        position: absolute;
+        left: 4%;
+        bottom: 5%;
+        font-size: 11px;
+        font-weight: bold;
+        text-align: justify;
+        width: 500px;
+    }
+  }
